--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/atotic/lazy-pages.git"
+    "url": "https://github.com/atotic/lazy-pages.git"
   },
   "keywords": [
     "web-components",
